--- a/pages/index.css
+++ b/pages/index.css
@@ -2,6 +2,9 @@
 @import url("../fonts/Inter/Inter-Web/inter.css");
 @import url("../blocks/globales.css");
 @import url("../blocks/page.css");
+@import url("../blocks/logo.css");
+@import url("../blocks/header.css");
+@import url("../blocks/content.css");
 
 
 
