--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,5 +1,16 @@
 .page {
-    color: #fff;
-    max-width: 1280px;
-    margin: 0 auto;
+  color: #fff;
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 0 200px;
+}
+@media (max-width: 768px){
+  .page{
+    padding: 0 100px;
   }
+}
+@media (max-width: 320px){
+  .page{
+    padding: 0 40px;
+  }
+}
