--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,15 +2,16 @@
   color: #fff;
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0 200px;
+  /* padding: 0 200px; */
+  padding: 0 16%;
 }
 @media (max-width: 768px){
   .page{
-    padding: 0 100px;
+
   }
 }
-@media (max-width: 320px){
+@media (max-width: 480px){
   .page{
-    padding: 0 40px;
+
   }
 }
