--- a/blocks/buttons.css
+++ b/blocks/buttons.css
@@ -15,6 +15,7 @@
     transition: opacity .3s;
     background-color: transparent;
     border: none;
+    flex-shrink: 0;
 }
 .edit-button:hover{
     opacity: .6;
