--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -37,7 +37,7 @@
 }
 .profile__contenedor-titulo{
     display: flex;
-    align-items: center;
+    align-items: baseline;
     gap: 5px;
 }
 .profile__subtitle{
@@ -47,6 +47,12 @@
     margin: 0;
 }
 
+@media (max-width: 1163px){
+    .profile__contenedor-titulo{
+        align-items: center;
+
+    }
+}
 
 @media (max-width: 768px){
     .profile{
@@ -60,6 +66,10 @@
     .profile__avatar{
         width: 120px;
         height: 120px;
+    }
+    .profile__contenedor-titulo{
+        align-items: center;
+
     }
 }
 
