--- a/pages/index.css
+++ b/pages/index.css
@@ -3,10 +3,12 @@
 @import url("../blocks/globales.css");
 @import url("../blocks/buttons.css");
 @import url("../blocks/page.css");
+@import url("../blocks/content.css");
 @import url("../blocks/logo.css");
 @import url("../blocks/header.css");
 @import url("../blocks/profile.css");
-@import url("../blocks/content.css");
+@import url("../blocks/card.css");
+@import url("../blocks/elements.css");
 
 
 
