--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,17 +1,7 @@
 .page {
   color: #fff;
-  max-width: 1280px;
+  max-width: 882px;
   margin: 0 auto;
-  /* padding: 0 200px; */
-  padding: 0 16%;
-}
-@media (max-width: 768px){
-  .page{
-
-  }
-}
-@media (max-width: 480px){
-  .page{
-
-  }
+  padding: 0 min(16%, 200px);
+  /* outline: 1px solid red; */
 }
