--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -17,7 +17,7 @@
 }
 .profile__avatar{
     flex-basis: 120px;
-    /* height: 120px; */
+    height: 120px;
     flex-shrink: 0;
 }
 .profile__imagen{
@@ -54,13 +54,14 @@
     }
 }
 
-@media (max-width: 768px){
+
+@media (max-width: 948px){
     .profile{
-        flex-direction: column;
-        height:350px;
+        /* flex-direction: column; */
+        /* height:250px; */
     }
     .profile__data{
-        flex-direction: column;
+        /* flex-direction: column; */
         
     }
     .profile__avatar{
@@ -72,5 +73,24 @@
 
     }
 }
+@media (max-width: 768px){
+    .profile{
+      height: 200px;
+        flex-direction: column;
+    }
+    .profile__data{
+       width: 100%;
+        
+    }
+  }
+@media (max-width: 480px){
+    .profile{
+        flex-direction: column;
+        height: 350px;
+    }
+    .profile__data{
+        flex-direction: column;
+    }
+  }
 
 
