--- a/pages/index.css
+++ b/pages/index.css
@@ -9,6 +9,7 @@
 @import url("../blocks/profile.css");
 @import url("../blocks/card.css");
 @import url("../blocks/elements.css");
+@import url("../blocks/popup.css");
 
 
 
