--- a/blocks/popup.css
+++ b/blocks/popup.css
@@ -14,6 +14,7 @@
     justify-content: center;
     align-items: center;
     display: none;
+    background-color: rgba(0, 0, 0, 0.5);
 }
 .popup_opened{
     display: flex;
