--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,9 +1,13 @@
 .header {
-    margin-top: 45px;
+    margin-top: 30px;
     width: 100%;
     height: 74px;
     border-bottom: solid 1px rgba(84, 84, 84, 0.70);
 }
 
-
+@media (min-width: 1280px){
+    .header{
+        margin-top: 45px;
+    }
+}
     
