--- a/pages/index.css
+++ b/pages/index.css
@@ -1,12 +1,12 @@
 @import url("../vendors/normalize.css");
 @import url("../fonts/Inter/Inter-Web/inter.css");
 @import url("../blocks/animaciones.css");
-@import url("../blocks/globales.css");
+@import url("../blocks/globales/globales.css");
 @import url("../blocks/buttons/buttons.css");
 @import url("../blocks/buttons/add-button/add-button.css");
 @import url("../blocks/buttons/edit-button/edit-button.css");
 @import url("../blocks/buttons/btn-cerrar/btncerrar.css");
-@import url("../blocks/page.css");
+@import url("../blocks/page/page.css");
 @import url("../blocks/content/content.css");
 @import url("../blocks/header/__logo/logo.css");
 @import url("../blocks/header/header.css");
@@ -33,6 +33,7 @@
 @import url("../blocks/cards/__card__imagen-corazon/__card__imagen-corazon.css");
 @import url("../blocks/cards/__me-gusta/__me-gusta.css");
 @import url("../blocks/cards/__card__trash/__card__trash.css");
-@import url("../blocks/overlay.css");
+@import url("../blocks/overlay/overlay.css");
+@import url("../blocks/overlay/__overlay__divTemp/__overlaydivtemp.css");
 @import url("../blocks/popupImage.css");
 @import url("../blocks/popup.css");
