ajustes en clases

--- a/blocks/cards/__me-gusta/__me-gusta.css
+++ b/blocks/cards/__me-gusta/__me-gusta.css
@@ -1,14 +1,13 @@
-.me-gusta {
+.card__me-gusta {
 	color: currentColor;
 	width: 21px;
 	height: 19px;
 	cursor: pointer;
 	transition: opacity .3s;
-}
-.me-gusta {
 	display: none;
 	color:currentColor;
 }
+
 
 .heartOn{
 	display: block;
