--- a/blocks/buttons/edit-button/edit-button.css
+++ b/blocks/buttons/edit-button/edit-button.css
@@ -1,12 +1,12 @@
-.edit-button{
-	width: 24px;
-	height: 24px;
-	cursor: pointer;
-	transition: opacity .3s;
-	background-color: transparent;
-	border: none;
-	flex-shrink: 0;
+.edit-button {
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
+  transition: opacity 0.3s;
+  background-color: transparent;
+  border: none;
+  flex-shrink: 0;
 }
-.edit-button:hover{
-	opacity: .6;
+.edit-button:hover {
+  opacity: 0.6;
 }
