--- a/blocks/globales/globales.css
+++ b/blocks/globales/globales.css
@@ -3,23 +3,23 @@
 *:after {
   box-sizing: inherit;
 }
-ul{
+ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-body{
+body {
   background-color: #000;
-  font-family: "Inter";
-	font-weight: 400;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
 }
-.fix{
+.fix {
   overflow: hidden;
 }
 
 p {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Inter", Arial, sans-serif;
   font-weight: 400;
 }
 
