ajustar width en profile data en img

--- a/blocks/profile/__profiledata/__profileavatar/__profileimage/__profileimage.css
+++ b/blocks/profile/__profiledata/__profileavatar/__profileimage/__profileimage.css
@@ -1,3 +1,10 @@
 .profile__imagen {
   border-radius: 50%;
+  width: 200px;
+}
+
+@media (min-width: 768px){
+  .profile__imagen{
+    width: 120px;
+  }
 }
