--- a/blocks/popup/__popcontainer/__popupcontatiner.css
+++ b/blocks/popup/__popcontainer/__popupcontatiner.css
@@ -8,4 +8,7 @@
   -moz-border-radius: 10px;
   -ms-border-radius: 10px;
   -o-border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
