--- a/blocks/globales/globales.css
+++ b/blocks/globales/globales.css
@@ -3,16 +3,18 @@
 *:after {
   box-sizing: inherit;
 }
+body {
+  background-color: #000;
+  font-family: "Inter", Arial, sans-serif;
+  font-weight: 400;
+  box-sizing: border-box;
+}
 ul {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-body {
-  background-color: #000;
-  font-family: "Inter", Arial, sans-serif;
-  font-weight: 400;
-}
+
 .fix {
   overflow: hidden;
 }
