Creacion del footer

--- a/pages/index.css
+++ b/pages/index.css
@@ -37,3 +37,4 @@
 @import url('../blocks/overlay/__overlay__divTemp/__overlaydivtemp.css');
 @import url('../blocks/popupImage.css');
 @import url('../blocks/popup.css');
+@import url('../blocks/footer/footer.css');
