--- a/blocks/overlay/__overlay__divTemp/__overlaydivtemp.css
+++ b/blocks/overlay/__overlay__divTemp/__overlaydivtemp.css
@@ -1,18 +1,22 @@
 .overlay__divTemp {
-  min-width: 75%;
+  min-width: 75vw;
   min-height: 50vh;
-  max-height: 70vh;
+  min-height: 75vh;
   position: relative;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   position: relative;
+
+
 }
 
 @media (min-width: 768px) {
   .overlay__divTemp {
-    min-width: 60%;
-    min-height: 80%;
+    max-width: 75vw;
+    max-height: 75dvh;
+
     margin-top: 80px;
-  }
+
+}
 }
