--- a/blocks/cards/__me-gusta/__me-gusta.css
+++ b/blocks/cards/__me-gusta/__me-gusta.css
@@ -8,9 +8,7 @@
   color: currentColor;
 }
 
-.heartOn {
-  display: block;
-}
-.heartOff {
-  display: none;
+.fa-solid{
+  animation: meGusta 1s;
+  -webkit-animation: meGusta 1s;
 }
