--- a/blocks/globales/animaciones.css
+++ b/blocks/globales/animaciones.css
@@ -41,10 +41,20 @@
     -o-transform: scale(1);
 }
   100%{
-    transform: scale(1.3);
-    -webkit-transform: scale(1.3);
-    -moz-transform: scale(1.3);
-    -ms-transform: scale(1.3);
-    -o-transform: scale(1.3);
+    transform: scale(1.2);
+    -webkit-transform: scale(1.2);
+    -moz-transform: scale(1.2);
+    -ms-transform: scale(1.2);
+    -o-transform: scale(1.2);
+}
+}
+@keyframes noMeGusta {
+  0%{
+    color: black;
+    opacity: 1;
+}
+  100%{
+    color: white;
+ opacity: 0;
 }
 }
