--- a/blocks/overlay/__overlay__divTemp/__overlaydivtemp.css
+++ b/blocks/overlay/__overlay__divTemp/__overlaydivtemp.css
@@ -13,8 +13,7 @@
 @media (min-width: 768px) {
   .overlay__divTemp {
     max-width: 75vw;
-    max-height: 75dvh;
-
+    max-height: 75vh;
     margin-top: 80px;
 
 }
