correcion de megusta

--- a/blocks/cards/__me-gusta/__me-gusta.css
+++ b/blocks/cards/__me-gusta/__me-gusta.css
@@ -8,12 +8,12 @@
   /* color: currentColor; */
 }
 
-.fa-solid {
+/* .fa-solid {
   animation: megusta 1s 2;
   -webkit-animation: megusta 1s 2;
-}
-.fa-regular{
+} */
+/* .fa-regular{
   animation: nomegusta .5s;
   animation-fill-mode:forwards;
   -webkit-animation: nomegusta .5s;
-}
+} */
