profile padding correcion

--- a/blocks/profile/profile.css
+++ b/blocks/profile/profile.css
@@ -1,5 +1,5 @@
 .profile {
-  /* padding: 0 22px; */
+  padding: 0 22px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
