--- a/blocks/popup/__popupinput/__popupinput.css
+++ b/blocks/popup/__popupinput/__popupinput.css
@@ -5,9 +5,14 @@
   display: block;
   width: 100%;
   height: 27px;
-  margin-bottom: 30px;
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+}
+.popup__input:focus{
+  outline: none;
+}
+.popup__input:invalid{
+  border-bottom: 1px solid red
 }
 
 .popup__input::placeholder {
@@ -15,4 +20,15 @@
   font-style: normal;
   font-weight: 400;
   color: #c4c4c4;
+}
+.form-input-error {
+  width: auto;
+  height: 16px;
+  color: rgb(255, 0, 0);
+  font-family: Inter;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  margin-bottom: 20px;
 }
