--- a/blocks/popup/__popupinput/__popupinput.css
+++ b/blocks/popup/__popupinput/__popupinput.css
@@ -14,6 +14,9 @@
 .popup__input:invalid{
   border-bottom: 1px solid red
 }
+.popup__input:valid{
+  border-bottom: 1px solid green
+}
 
 .popup__input::placeholder {
   font-size: 14px;
