--- a/blocks/popup/__popupinput/__popupinput.css
+++ b/blocks/popup/__popupinput/__popupinput.css
@@ -8,14 +8,14 @@
   border: none;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
 }
-.popup__input:focus{
+.popup__input:focus {
   outline: none;
 }
-.popup__input:invalid{
-  border-bottom: 1px solid red
+.popup__input:invalid {
+  border-bottom: 1px solid red;
 }
-.popup__input:valid{
-  border-bottom: 1px solid green
+.popup__input:valid {
+  border-bottom: 1px solid green;
 }
 
 .popup__input::placeholder {
