cursor pointer on hearts

--- a/blocks/cards/__card__imagen-corazon/__card__imagen-corazon.css
+++ b/blocks/cards/__card__imagen-corazon/__card__imagen-corazon.css
@@ -1,6 +1,9 @@
 .card__imagen-corazon {
   width: 20px;
 }
+.card__imagen-corazon:hover {
+  cursor: pointer;
+}
 .card__imagen-corazon_solid {
   display: none;
 }
