--- a/blocks/buttons/btn-cerrar/btncerrar.css
+++ b/blocks/buttons/btn-cerrar/btncerrar.css
@@ -2,8 +2,8 @@
   width: 26px;
   height: 26px;
   position: absolute;
-  top: -35px;
-  right: 0;
+  top: -30px;
+  right: -30px;
   transition: opacity 0.3s;
 }
 
