--- a/src/pages/styles/blocks/buttons/btn-cerrar/btncerrar.css
+++ b/src/pages/styles/blocks/buttons/btn-cerrar/btncerrar.css
@@ -5,6 +5,17 @@
   top: -30px;
   right: -30px;
   transition: opacity 0.3s;
+  -webkit-transition: opacity 0.3s;
+  -moz-transition: opacity 0.3s;
+  -ms-transition: opacity 0.3s;
+  -o-transition: opacity 0.3s;
+}
+.btnCerrar_overlay{
+  width: 26px;
+  height: 26px;
+  position: absolute;
+  top: -30px;
+  right: -30px;
 }
 
 .btnCerrar:hover {
