--- a/src/pages/styles/blocks/popup/popup.css
+++ b/src/pages/styles/blocks/popup/popup.css
@@ -14,6 +14,22 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
 }
+.popup-animation {
+  animation: zoomIn 0.5s ease-in-out;
+}
+.popup-cierre {
+  transition: opacity 0.5s ease;
+  opacity: 0;
+}
+
+@keyframes zoomIn {
+  0% {
+    transform: scale(0);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
 
 .popup_opened {
   display: flex;
