overlay image fix

--- a/src/pages/styles/blocks/elements/elements.css
+++ b/src/pages/styles/blocks/elements/elements.css
@@ -5,4 +5,6 @@
   grid-template-rows: repeat(2, 361px);
   justify-content: center;
   gap: 15px;
+  grid-auto-flow: dense;
+  transition: grid-auto-flow 1s ease-out;
 }
