--- a/src/pages/styles/blocks/cards/__card__imagen-corazon/__card__imagen-corazon.css
+++ b/src/pages/styles/blocks/cards/__card__imagen-corazon/__card__imagen-corazon.css
@@ -3,6 +3,16 @@
 }
 .card__imagen-corazon:hover {
   cursor: pointer;
+  transform: scale(1.2);
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -ms-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transition: all 0.3s;
+  -webkit-transition: all 0.3s;
+  -moz-transition: all 0.3s;
+  -ms-transition: all 0.3s;
+  -o-transition: all 0.3s;
 }
 .card__imagen-corazon_solid {
   display: none;
@@ -20,6 +30,7 @@
 }
 
 .corazonOff {
+  animation: fadeOut 1s;
   display: none;
 }
 .corazonOn {
