--- a/src/pages/styles/blocks/popup/popup.css
+++ b/src/pages/styles/blocks/popup/popup.css
@@ -14,6 +14,10 @@
   background-color: rgba(0, 0, 0, 0.5);
   display: none;
 }
+
+.popup__formDeleteCard {
+  background-color: red;
+}
 .popup-animation {
   animation: zoomIn 0.5s ease-in-out;
 }
