--- a/src/pages/styles/blocks/cards/card.css
+++ b/src/pages/styles/blocks/cards/card.css
@@ -8,3 +8,9 @@
   grid-template-rows: 282px 79px;
   position: relative;
 }
+.card__like-counter{
+  /* background-color: red; */
+  color: black;
+  align-self: flex-end;
+  margin-right: 5px;
+}
