--- a/src/pages/styles/blocks/profile/__profileEditIcon/profileEditIcon.css
+++ b/src/pages/styles/blocks/profile/__profileEditIcon/profileEditIcon.css
@@ -1,6 +1,19 @@
 .profile__edit-icon {
   width: 26px;
   height: 26px;
+  opacity: 0;
+  transition: all 1s;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
+}
+.profile__edit-icon:hover {
+  transform: scale(1.2);
+  transition: all 1s;
+  -webkit-transition: all 1s;
+  -moz-transition: all 1s;
+  -ms-transition: all 1s;
+  -o-transition: all 1s;
 
-opacity: 0;
 }
