--- a/src/pages/styles/blocks/cards/__card__contenido/__card__contenido.css
+++ b/src/pages/styles/blocks/cards/__card__contenido/__card__contenido.css
@@ -1,6 +1,14 @@
 .card__contenido {
+  color: #000;
+  text-align: center;
+  font-family: Inter;
+  font-size: 13px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
   padding: 0 15px;
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
