--- a/src/pages/styles/blocks/cards/__card__contenido/__card__contenido.css
+++ b/src/pages/styles/blocks/cards/__card__contenido/__card__contenido.css
@@ -1,8 +1,8 @@
 .card__contenido {
   color: #000;
-  text-align: center;
+  /* text-align: center; */
   font-family: Inter;
-  font-size: 13px;
+  font-size: 14px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
