--- a/src/pages/styles/blocks/cards/__card__imagen-corazon/__card__imagen-corazon.css
+++ b/src/pages/styles/blocks/cards/__card__imagen-corazon/__card__imagen-corazon.css
@@ -1,6 +1,6 @@
 .card__imagen-corazon {
-  width: 25px;
-  height: 25px;
+  width: 20px;
+  height: 20px;
   background-image: url(../../../../../images/me_gusta.svg);
   background-repeat: no-repeat;
   background-position: center;
@@ -12,31 +12,9 @@
   -o-transition: all 1s;
 }
 .card__imagen-corazon_solid {
-  width: 25px;
-  height: 25px;
   background-image: url(../../../../../images/me_gusta_negro.svg);
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 20px 20px;
-  transition: all 1s;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
 }
-.card__imagen-corazon:hover {
-  cursor: pointer;
-  transform: scale(1.2);
-  transition: all 0.8s;
-  -webkit-transition: all 0.8s;
-  -moz-transition: all 0.8s;
-  -ms-transition: all 0.8s;
-  -o-transition: all 0.8s;
-  -webkit-transform: scale(1.2);
-  -moz-transform: scale(1.2);
-  -ms-transform: scale(1.2);
-  -o-transform: scale(1.2);
-}
+.card__imagen-corazon:hover,
 .card__imagen-corazon_solid:hover {
   cursor: pointer;
   transform: scale(1.2);
@@ -51,7 +29,7 @@
   -o-transform: scale(1.2);
 }
 
-.card__imagen-corazon,
+.card__imagen-corazon:hover,
 .card__imagen-corazon_solid:hover {
   opacity: 0.6;
   overflow: hidden;
