--- a/src/pages/styles/blocks/error/error.css
+++ b/src/pages/styles/blocks/error/error.css
@@ -1,22 +1,13 @@
 .error {
-  place-items: center;
-  text-align: center;
+  display: none;
+  width: 100%;
+  height: 32px;
+  margin: 40px auto 0;
+  padding: 10px;
   color: red;
   background-color: rgba(251, 251, 251, 0.123);
-  height: 32px;
-  display: grid;
-  margin-top: 40px;
-  width: 100%;
-  margin: 0 auto;
   border-radius: 5px;
+  text-align: center;
+  place-items: center;
   transition: all 1s;
-  -webkit-transition: all 1s;
-  -moz-transition: all 1s;
-  -ms-transition: all 1s;
-  -o-transition: all 1s;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
-  display: none;
 }
