--- a/src/pages/styles/blocks/popup/__popupsubmit/__popupsubmit.css
+++ b/src/pages/styles/blocks/popup/__popupsubmit/__popupsubmit.css
@@ -20,6 +20,7 @@
   opacity: 0.6;
 }
 .form__submit_inactive {
+  margin-top: 30px;
   border-radius: 2px;
   border: 1px solid #000;
   opacity: 0.2;
