--- a/src/pages/styles/blocks/error/error.css
+++ b/src/pages/styles/blocks/error/error.css
@@ -1,8 +1,9 @@
 .error {
+  font-size: 24px;
   display: none;
   width: 100%;
   height: 32px;
-  margin: 40px auto 0;
+  height: 45px;
   padding: 10px;
   color: red;
   background-color: rgba(251, 251, 251, 0.123);
